--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
     .pbtn { flex:1; text-align:center; padding:9px 10px; border-radius:12px; text-decoration:none; font-weight:700 }
     .pbtn.buy { background:var(--brand); color:#fff }
     .pbtn.more { border:2px solid var(--brand); color:var(--brand); background:#fff }
+    .pdesc{
+  color:#5a6c69;
+  font-size:.85rem;
+  margin:2px 0 4px;
+  display:-webkit-box;
+  -webkit-line-clamp:2;
+  -webkit-box-orient:vertical;
+  overflow:hidden;
+}
 
     /* Promo + header (search) + top nav */
     .top-promo{background:#0f4f47;color:#fff;font-weight:600;text-align:center;padding:8px 12px;font-size:.95rem}
