--- a/index.html
+++ b/index.html
@@ -29,14 +29,36 @@
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--ink);line-height:1.6}
 
-    /* === Amazon-style Featured grid === */
-    .featured { margin: 28px 0 8px }
-    .featured h3.section { margin: 18px 0 12px; color: var(--ink); font-size: 1.15rem }
-/* Featured grid — make product image bigger like Amazon tiles */
-.cards { grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); }
+/* === style Featured grid (complete) === */
+.featured { margin: 28px 0 8px }
+.featured h3.section { margin: 18px 0 12px; color: var(--ink); font-size: 1.15rem }
+
+.cards { display:grid; grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); gap:14px }
+
+.pcard { background:#fff; border:1px solid var(--border); border-radius:14px;
+         box-shadow:0 8px 22px rgba(0,0,0,.06); padding:12px; display:flex; flex-direction:column }
+
 .pimg { aspect-ratio: 4 / 5; padding: 10px; }      /* taller image area */
 .pimg img { transform: scale(1); transition: transform .15s ease; }
 .pcard:hover .pimg img { transform: scale(1.04); } /* subtle hover zoom */
+
+.swatches { display:flex; gap:6px; margin:8px 0 6px }
+.swatch { width:11px; height:11px; border-radius:999px; border:1px solid rgba(0,0,0,.25) }
+.ptitle { margin:6px 0 4px; font-size:.95rem; line-height:1.35;
+          display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; overflow:hidden }
+.prating { display:flex; align-items:center; gap:6px; margin:2px 0 4px; font-size:.86rem; color:#4b5c59 }
+.stars { letter-spacing:1px; color:#F59E0B } /* ★ unicode stars */
+.price { font-weight:800; margin:6px 0 2px; font-size:1.05rem }
+.price sup { font-size:.7em; vertical-align:top }
+.meta { color:#5a6c69; font-size:.82rem; margin:0 0 8px }
+.actions { margin-top:auto; display:flex; gap:8px }
+.pbtn { flex:1; text-align:center; padding:9px 10px; border-radius:12px; text-decoration:none; font-weight:700 }
+.pbtn.buy { background:var(--brand); color:#fff }
+.pbtn.more { border:2px solid var(--brand); color:var(--brand); background:#fff }
+
+.pdesc{ color:#5a6c69; font-size:.85rem; margin:2px 0 4px;
+        display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; overflow:hidden }
+
 
     .swatches { display:flex; gap:6px; margin:8px 0 6px }
     .swatch { width:11px; height:11px; border-radius:999px; border:1px solid rgba(0,0,0,.25) }
