--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--ink);line-height:1.6}
 
-    /* === Amazon-style Featured grid (complete) === */
+    /* === Featured grid (complete) === */
     .featured { margin: 28px 0 8px }
     .featured h3.section { margin: 18px 0 12px; color: var(--ink); font-size: 1.15rem }
     .cards { display:grid; grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); gap:14px }
