--- a/us/products/bioma-probiotics/index.html
+++ b/us/products/bioma-probiotics/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>Bioma Probiotics — Pre-, Pro- & Postbiotics | RevigoreLife (US)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Bioma Probiotics combines prebiotics, probiotics and postbiotics to support digestive balance and a healthy gut ecosystem. Learn more and shop in the US.">
+  <meta name="description" content="Bioma Probiotics supports digestive balance with a 3-in-1 blend: prebiotic XOS, probiotic strains and postbiotic tributyrin. Vegan, gluten-free; 60 delayed-release capsules.">
   <meta property="og:title" content="Bioma Probiotics — Pre-, Pro- & Postbiotics">
-  <meta property="og:description" content="3-in-1 gut support: prebiotics to nourish, probiotics to replenish, postbiotics to signal.">
+  <meta property="og:description" content="Digestive health support for men & women. 3-in-1 formula with prebiotic XOS, tributyrin and Bifidobacterium strains.">
   <meta property="og:image" content="/assets/img/products/bioma-probiotics/Main_Bioma.png">
   <meta property="og:type" content="product">
   <meta property="og:url" content="https://revigorelife.com/us/products/bioma-probiotics/">
@@ -17,47 +17,68 @@
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)};gtag('js',new Date());gtag('config','G-ZYSHDCW0X5',{anonymize_ip:true});</script>
 
   <style>
-    :root{--brand:#1C6B63;--ink:#163a36;--bg:#f7f9f8;--border:#e7ecea}
+    :root{--brand:#1C6B63;--ink:#163a36;--bg:#f7f9f8;--border:#e7ecea;
+          --hi:#ffe6e1; --hi2:#ffe0cc; --muted:#f2f5f4}
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--ink);line-height:1.6}
-    a{color:var(--brand)}
+    a{color:var(--brand);text-decoration:none}
+
+    /* Header (simple) */
     header.site-head{background:#fff;border-bottom:1px solid var(--border)}
     header .row{max-width:1200px;margin:0 auto;display:grid;grid-template-columns:220px 1fr 260px;gap:16px;align-items:center;padding:14px 16px}
     .logo{height:clamp(56px,7vw,88px);object-fit:contain}
     .quicklinks{text-align:right}
-    .quicklinks a{font-weight:600;text-decoration:none;margin-left:10px;color:#163a36}
+    .quicklinks a{font-weight:600;margin-left:10px;color:#163a36}
 
     .wrap{max-width:1200px;margin:22px auto 64px;padding:0 16px}
 
-    /* Product hero */
+    /* Hero */
     .p-hero{display:grid;grid-template-columns:minmax(280px,520px) 1fr;gap:28px;align-items:start}
     .img-wrap{background:#fff;border:1px solid var(--border);border-radius:18px;height:min(72vh,640px);display:grid;place-items:center;box-shadow:0 14px 36px rgba(0,0,0,.06)}
     .img-wrap img{max-width:96%;max-height:96%;object-fit:contain}
     .p-title{margin:0 0 8px;color:var(--brand);font-size:clamp(22px,3vw,30px);line-height:1.2}
     .rating{color:#4b5c59;font-size:.95rem;margin:6px 0 10px}
-    .price{font-weight:800;font-size:1.4rem;margin:8px 0}
+    .sub{color:#4b5c59}
+
     .cta{display:flex;gap:12px;flex-wrap:wrap;margin:12px 0 18px}
-    .btn{display:inline-block;padding:12px 16px;border-radius:12px;font-weight:800;text-decoration:none}
+    .btn{display:inline-block;padding:12px 16px;border-radius:12px;font-weight:800;text-align:center}
     .btn.buy{background:var(--brand);color:#fff}
     .btn.alt{border:2px solid var(--brand);color:var(--brand);background:#fff}
 
-    /* Sections */
     .section{background:#fff;border:1px solid var(--border);border-radius:16px;padding:18px 16px;margin-top:16px}
     .section h3{margin:0 0 8px;font-size:1.1rem;color:#1b4944}
     ul.bullets{margin:8px 0 0 18px}
     .disclaimer{font-size:.85rem;color:#566765;margin-top:10px}
 
+    /* 3-tile plans */
+    .plans{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin-top:18px}
+    .plan{background:#fff;border:1px solid var(--border);border-radius:18px;padding:18px;box-shadow:0 12px 32px rgba(0,0,0,.06)}
+    .plan--popular{background:var(--hi)}
+    .plan--value{background:var(--hi2)}
+    .plan .ribbon{display:block;text-align:center;font-weight:900;color:#b2231d;background:#ffcec6;border-radius:12px;padding:8px 10px;margin:-10px auto 10px;max-width:86%}
+    .plan h4{margin:6px 0 2px;text-align:center;font-size:1.15rem}
+    .plan p.small{margin:0 0 10px;text-align:center;color:#5b6b68;font-size:.95rem}
+    .plan .pimg{display:grid;place-items:center;height:180px;margin:6px 0 4px}
+    .plan .pimg img{max-height:170px;max-width:100%;object-fit:contain}
+    .price{font-weight:900;font-size:1.8rem;text-align:left;margin:6px 0}
+    .price small{font-weight:600;font-size:.9rem;color:#4b5c59}
+    .strike{color:#8a9a97;text-decoration:line-through;font-size:.95rem;margin:2px 0 10px}
+    .checks{margin:8px 0 14px;padding:0;list-style:none}
+    .checks li{display:flex;align-items:center;gap:10px;margin:8px 0}
+    .check{width:18px;height:18px;border-radius:999px;background:#0f9d58;display:inline-block;box-shadow:inset 0 0 0 3px #fff}
+    .plan .cta{margin-top:8px}
+    .plan .btn{width:100%;padding:12px 16px;border-radius:12px;font-weight:900}
+    .plan .btn.order{background:#000;color:#fff}
+    .fineprint{text-align:center;color:#5a6c69;font-size:.88rem;margin-top:12px}
+
     /* Footer */
     footer{background:var(--brand);color:#fff;text-align:center;margin-top:36px}
     footer nav{display:flex;gap:22px;justify-content:center;padding:14px;border-bottom:1px solid rgba(255,255,255,.2)}
-    footer a{color:#fff;text-decoration:none;font-weight:600}
+    footer a{color:#fff;font-weight:600}
     footer .legal{padding:12px 16px 18px;opacity:.95}
 
-    @media (max-width:900px){
-      header .row{grid-template-columns:170px 1fr}
-      .p-hero{grid-template-columns:1fr}
-      .img-wrap{height:420px}
-    }
+    @media (max-width:940px){ .p-hero{grid-template-columns:1fr}.img-wrap{height:420px} }
+    @media (max-width:800px){ .plans{grid-template-columns:1fr} .plan{margin-top:4px} }
   </style>
 </head>
 <body>
@@ -85,57 +106,36 @@
     </div>
 
     <div>
-      <h1 class="p-title">Bioma Probiotics — Prebiotics • Probiotics • Postbiotics</h1>
+      <h1 class="p-title">Bioma Probiotics — Digestive Health Probiotic</h1>
+      <p class="sub">3-in-1 formula with <strong>prebiotic XOS</strong>, <strong>probiotic Bifidobacterium</strong> strains and <strong>postbiotic tributyrin</strong>. Vegan, gluten-free; 60 delayed-release capsules (30-day supply).</p>
       <div class="rating">★ ★ ★ ★ ☆  4.6 (community reviews)</div>
-      <div class="price">$47<sup>99</sup></div>
+
       <div class="cta">
         <a class="btn buy" href="/go/bioma-probiotics/?country=US" rel="sponsored nofollow noopener"
-           onclick="gtag('event','affiliate_click',{offer:'bioma-probiotics',placement:'pdp'});">Buy Now</a>
-        <a class="btn alt" href="#details">Product Details</a>
+           onclick="gtag('event','affiliate_click',{offer:'bioma-probiotics',placement:'pdp-top'});">Buy Now</a>
+        <a class="btn alt" href="#plans">See Plans</a>
       </div>
 
       <div class="section" id="overview">
-        <h3>Overview</h3>
-        <p><strong>Bioma Probiotics</strong> is a 3-in-1 formula that pairs
-          <em>prebiotics</em> (to nourish good bacteria),
-          <em>probiotics</em> (to replenish beneficial strains), and
-          <em>postbiotics</em> (beneficial compounds made by probiotics) to help
-          support everyday digestive comfort and a balanced gut ecosystem.</p>
-        <p>Designed for daily use and busy lifestyles, the formula is shelf-stable and crafted for broad, gentle support.</p>
-      </div>
-
-      <div class="section" id="highlights">
-        <h3>Key Benefits</h3>
+        <h3>Why it’s different</h3>
+        <p><strong>Bioma Probiotics</strong> supports a balanced gut ecosystem by combining the three parts your microbiome loves:
+          <em>prebiotics</em> to feed beneficial flora, <em>probiotics</em> to replenish key strains, and
+          <em>postbiotics</em> to deliver helpful metabolites. Designed for daily comfort and regularity.*</p>
         <ul class="bullets">
-          <li>3-in-1 gut support: prebiotics + probiotics + postbiotics</li>
-          <li>Supports digestive balance and regularity*</li>
-          <li>Helps with occasional gas and bloating*</li>
-          <li>Convenient daily capsule; no fridge required</li>
+          <li>3-in-1 gut support: prebiotic XOS + probiotic strains + postbiotic tributyrin</li>
+          <li>Vegan, gluten-free; delayed-release capsules</li>
+          <li>Made for daily use; no refrigeration needed</li>
         </ul>
         <p class="disclaimer">*These statements have not been evaluated by the Food and Drug Administration. This product is not intended to diagnose, treat, cure, or prevent any disease.</p>
       </div>
-
-      <div class="section" id="details">
-        <h3>How to Use</h3>
-        <p>Adults: take as directed on the product label, preferably with water. If you’re new to probiotics, start with the lowest suggested serving for a few days.</p>
-      </div>
-
-      <div class="section" id="safety">
-        <h3>Good to Know</h3>
-        <p>Consult your healthcare professional before use if you are pregnant, nursing, taking medication, or have a medical condition. Keep out of reach of children.</p>
-      </div>
     </div>
   </div>
-</main>
 
-<footer>
-  <nav>
-    <a href="/disclosures.html">Disclosures</a>
-    <a href="/privacy.html">Privacy</a>
-    <a href="/">Home</a>
-  </nav>
-  <div class="legal">© <script>document.write(new Date().getFullYear())</script> RevigoreLife</div>
-</footer>
-
-</body>
-</html>
+  <!-- Plans & Pricing -->
+  <div class="section" id="plans">
+    <h3 style="margin-bottom:12px;">Plans & Pricing</h3>
+    <div class="plans">
+      <!-- 1 bottle -->
+      <div class="plan">
+        <h4>1-month supply</h4>
+        <p class="small">Ideal for try
