--- a/us/products/bioma-probiotics/index.html
+++ b/us/products/bioma-probiotics/index.html
@@ -138,4 +138,77 @@
       <!-- 1 bottle -->
       <div class="plan">
         <h4>1-month supply</h4>
-        <p class="small">Ideal for try
+        <p class="small">Ideal for trying it out</p>
+        <div class="pimg">
+          <img src="/assets/img/products/bioma-probiotics/Main_Bioma.png" alt="">
+        </div>
+        <div class="price">$47.99 <small>per bottle</small></div>
+        <div class="strike">Compare at $59.99</div>
+        <ul class="checks">
+          <li><span class="check"></span>30 daily servings</li>
+          <li><span class="check"></span>≈ $1.60 per day</li>
+          <li><span class="check"></span>1 bottle delivered</li>
+        </ul>
+        <div class="cta"><a class="btn order"
+          href="/go/bioma-probiotics/?country=US&plan=1b"
+          rel="sponsored nofollow noopener"
+          onclick="gtag('event','affiliate_click',{offer:'bioma-probiotics',plan:'1b',placement:'plans'});">Order now</a></div>
+      </div>
+
+      <!-- 3 bottles (Popular) -->
+      <div class="plan plan--popular">
+        <span class="ribbon">Most popular • SAVE</span>
+        <h4>3-month supply</h4>
+        <p class="small">Great for building habits</p>
+        <div class="pimg">
+          <img src="/assets/img/products/bioma-probiotics/Main_Bioma.png" alt="">
+        </div>
+        <div class="price">$34.99 <small>per bottle</small></div>
+        <div class="strike">Compare at $49.99</div>
+        <ul class="checks">
+          <li><span class="check"></span>90 daily servings</li>
+          <li><span class="check"></span>≈ $1.17 per day</li>
+          <li><span class="check"></span>3 bottles delivered</li>
+        </ul>
+        <div class="cta"><a class="btn order"
+          href="/go/bioma-probiotics/?country=US&plan=3b"
+          rel="sponsored nofollow noopener"
+          onclick="gtag('event','affiliate_click',{offer:'bioma-probiotics',plan:'3b',placement:'plans'});">Order now</a></div>
+      </div>
+
+      <!-- 6 bottles (Best value) -->
+      <div class="plan plan--value">
+        <span class="ribbon">Best value • SAVE</span>
+        <h4>6-month supply</h4>
+        <p class="small">For long-term results</p>
+        <div class="pimg">
+          <img src="/assets/img/products/bioma-probiotics/Main_Bioma.png" alt="">
+        </div>
+        <div class="price">$25.99 <small>per bottle</small></div>
+        <div class="strike">Compare at $39.99</div>
+        <ul class="checks">
+          <li><span class="check"></span>180 daily servings</li>
+          <li><span class="check"></span>≈ $0.87 per day</li>
+          <li><span class="check"></span>6 bottles delivered</li>
+        </ul>
+        <div class="cta"><a class="btn order"
+          href="/go/bioma-probiotics/?country=US&plan=6b"
+          rel="sponsored nofollow noopener"
+          onclick="gtag('event','affiliate_click',{offer:'bioma-probiotics',plan:'6b',placement:'plans'});">Order now</a></div>
+      </div>
+    </div>
+
+    <p class="fineprint">Prices shown are per bottle and based on typical vendor offers. Final pricing, savings and any gifts are confirmed at checkout.</p>
+  </div>
+</main>
+
+<footer>
+  <nav>
+    <a href="/disclosures.html">Disclosures</a>
+    <a href="/privacy.html">Privacy</a>
+    <a href="/">Home</a>
+  </nav>
+  <div class="legal">© <script>document.write(new Date().getFullYear())</script> RevigoreLife</div>
+</footer>
+</body>
+</html>
