--- a/us/products/bioma-probiotics/index.html
+++ b/us/products/bioma-probiotics/index.html
@@ -17,7 +17,7 @@
   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)};gtag('js',new Date());gtag('config','G-ZYSHDCW0X5',{anonymize_ip:true});</script>
 
   <style>
-    :root{--brand:#1C6B63;--ink:#163a36;--bg:#f7f9f8;--border:#e7ecea}
+    :root{--brand:#1C6B63;--ink:#163a36;--bg:#f7f9f8;--border:#e7ecea;--hi:#ffefe8;--accent:#ff7a59}
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--ink);line-height:1.6}
     a{color:var(--brand);text-decoration:none}
@@ -38,7 +38,6 @@
     .p-title{margin:0 0 8px;color:var(--brand);font-size:clamp(22px,3vw,30px);line-height:1.2}
     .sub{color:#4b5c59}
     .rating{color:#4b5c59;font-size:.95rem;margin:6px 0 14px}
-
     .cta{display:flex;gap:12px;flex-wrap:wrap;margin:14px 0 18px}
     .btn{display:inline-block;padding:12px 18px;border-radius:12px;font-weight:800;text-align:center}
     .btn.buy{background:var(--brand);color:#fff}
@@ -50,6 +49,23 @@
     ul.bullets{margin:8px 0 0 18px}
     .disclaimer{font-size:.85rem;color:#566765;margin-top:10px}
 
+    /* Best value callout (6-month) */
+    .deal{margin-top:18px;padding:0;border:none}
+    .deal .top{background:var(--accent);color:#fff;text-align:center;font-weight:900;border-top-left-radius:14px;border-top-right-radius:14px;padding:10px 12px}
+    .deal .box{border:1px solid var(--border);border-bottom-left-radius:14px;border-bottom-right-radius:14px;background:#fff;display:grid;grid-template-columns:160px 1fr;gap:18px;padding:18px}
+    .deal .media{display:grid;place-items:center}
+    .deal .media img{max-width:140px;max-height:140px;object-fit:contain}
+    .deal h4{margin:0 0 6px;font-size:1.2rem}
+    .deal .lead{color:#4b5c59;margin:0 0 6px}
+    .deal .strike{color:#9aa7a4;text-decoration:line-through;margin:6px 0 2px;font-weight:700}
+    .deal .price{font-size:2rem;font-weight:900;margin:0 0 4px}
+    .deal small{color:#566765}
+    .checks{list-style:none;padding:0;margin:10px 0 14px}
+    .checks li{display:flex;align-items:center;gap:10px;margin:6px 0}
+    .check{width:18px;height:18px;border-radius:50%;background:#0f9d58;box-shadow:inset 0 0 0 3px #fff;display:inline-block}
+    .deal .order{display:block;width:100%;text-align:center;background:#000;color:#fff;padding:12px 16px;border-radius:12px;font-weight:900}
+    .deal .fine{margin-top:10px;color:#5b6b68;font-size:.9rem;text-align:center}
+
     /* Footer */
     footer{background:var(--brand);color:#fff;text-align:center;margin-top:36px}
     footer nav{display:flex;gap:22px;justify-content:center;padding:14px;border-bottom:1px solid rgba(255,255,255,.2)}
@@ -57,6 +73,7 @@
     footer .legal{padding:12px 16px 18px;opacity:.95}
 
     @media (max-width:940px){ .p-hero{grid-template-columns:1fr}.img-wrap{height:420px} }
+    @media (max-width:680px){ .deal .box{grid-template-columns:1fr} .deal .media{order:-1} }
   </style>
 </head>
 <body>
@@ -114,21 +131,49 @@
         </ul>
         <p class="disclaimer">*These statements have not been evaluated by the Food and Drug Administration. This product is not intended to diagnose, treat, cure, or prevent any disease.</p>
       </div>
-
-      <div class="section" id="details">
-        <h3>How to use</h3>
-        <p>Adults: take as directed on the product label, preferably with water. If you’re new to probiotics, start with the lowest suggested serving for a few days.</p>
-      </div>
-
-      <div class="section" id="safety">
-        <h3>Good to know</h3>
-        <p>Consult your healthcare professional before use if you are pregnant, nursing, taking medication, or have a medical condition. Keep out of reach of children.</p>
-      </div>
     </div>
   </div>
 
-  <!-- Optional note to set expectations -->
-  <p style="margin:14px 0 0;color:#5b6b68;">At checkout, you’ll choose your preferred supply size (e.g., 1, 3 or 6 bottles).</p>
+  <!-- Best value — US pricing like your screenshot -->
+  <section class="section deal" aria-labelledby="best-value">
+    <div class="top" id="best-value">Best value SAVE 60%</div>
+    <div class="box">
+      <div class="media">
+        <img src="/assets/img/products/bioma-probiotics/Main_Bioma.png" alt="">
+      </div>
+      <div>
+        <h4>6-month supply</h4>
+        <p class="lead">For achieving sustainable results</p>
+        <div class="strike">$65.34</div>
+        <div class="price">$26.14</div>
+        <small>per bottle</small>
+
+        <ul class="checks">
+          <li><span class="check"></span>180 daily servings</li>
+          <li><span class="check"></span>$0.87 per day</li>
+          <li><span class="check"></span>6 bottles delivered</li>
+        </ul>
+
+        <a class="order" href="/go/bioma-probiotics/?country=US&plan=6b"
+           rel="sponsored nofollow noopener"
+           onclick="gtag('event','affiliate_click',{offer:'bioma-probiotics',plan:'6b',placement:'best-value'});">
+          Order now
+        </a>
+
+        <p class="fine">Cancel anytime. Free shipping. Final pricing and any gifts are confirmed at checkout.</p>
+      </div>
+    </div>
+  </section>
+
+  <div class="section" id="details">
+    <h3>How to use</h3>
+    <p>Adults: take as directed on the product label, preferably with water. If you’re new to probiotics, start with the lowest suggested serving for a few days.</p>
+  </div>
+
+  <div class="section" id="safety">
+    <h3>Good to know</h3>
+    <p>Consult your healthcare professional before use if you are pregnant, nursing, taking medication, or have a medical condition. Keep out of reach of children.</p>
+  </div>
 </main>
 
 <footer>
